--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <header>
       <div class="logo">
         <img src="./assets/type_black.svg" alt="Logo" height="40" width="auto" />
+        <div class="version-info">
+          <span class="app-version" id="app-version">v1.0.0</span>
+          <button class="update-check-btn" id="update-check-btn" title="Check for updates">
+            <i class="fas fa-sync-alt"></i>
+          </button>
+        </div>
       </div>
       <button class="hide-show" title="Show/Hide Codes">
         <i class="fas fa-eye-slash"></i>
